; ModuleID = '/home/carl/AnghaBench/FFmpeg/tools/extr_coverity.c_av_mallocz.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tools/extr_coverity.c_av_mallocz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"av_free\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @av_mallocz(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @__coverity_negative_sink__(i64 %6)
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  %12 = call i8* @__coverity_alloc__(i64 %11)
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @__coverity_writeall0__(i8* %13)
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @__coverity_mark_as_afm_allocated__(i8* %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %17 = load i8*, i8** %5, align 8
  store i8* %17, i8** %2, align 8
  br label %19

18:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %19

19:                                               ; preds = %18, %10
  %20 = load i8*, i8** %2, align 8
  ret i8* %20
}

declare dso_local i32 @__coverity_negative_sink__(i64) #1

declare dso_local i8* @__coverity_alloc__(i64) #1

declare dso_local i32 @__coverity_writeall0__(i8*) #1

declare dso_local i32 @__coverity_mark_as_afm_allocated__(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
